# VexIqBuild

./: README.txt
iqproject/: .gitignore  CMakeLists.txt
iqproject/include/: vex.h
iqproject/iqSDK/V1/: link.ld
iqproject/iqSDK/V1/include/: iq_apitypes.h  iq_cpp.h  iq_vcs.h  vex_brain.h  vex_bumper.h  vex_colorsensor.h  vex_console.h  vex_controller.h  vex_device.h  vex_distance.h  vex_drivetrain.h  vex_event.h  vex_generic.h  vex_global.h  vex_gyro.h  vex_motor.h  vex_motorgroup.h  vex_optical.h  vex_smartdrive.h  vex_sonar.h  vex_task.h  vex_thread.h  vex_timer.h  vex_touchled.h  vex_units.h  vex_vision.h
iqproject/iqSDK/V2/: link.ld
iqproject/iqSDK/V2/include/: iq2_api.h  iq2_apitypes.h  iq2_cpp.h  vex_brain.h  vex_bumper.h  vex_color.h  vex_colorsensor.h  vex_controller.h  vex_device.h  vex_generic.h  vex_global.h  vex_gyro.h  vex_imu.h  vex_motor.h  vex_optical.h  vex_smartdrive.h  vex_sonar.h  vex_task.h  vex_timer.h  vex_touchled.h  vex_units.h  vex_vision.h
iqproject/src/: main.cpp
iqproject/vex/: makefile_old  mkenv1.mk  mkenv2.mk
vex_interface/: Cargo.toml
vex_interface/src/: cli.rs  main.rs  serial.rs  vex_device.rs
